--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,9 @@
 = MonetDB CHANGELOG
 
+== Version 0.1.1 (August 28, 2014)
+
+* Fixed raising several errors
+
 == Version 0.1.0 (August 28, 2014)
 
 * Initial release
