--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,9 @@
 = MonetDB CHANGELOG
 
+== Version 0.1.3 (October 8, 2014)
+
+* Corrected MonetDB#select_rows (was not fetching entire result set)
+
 == Version 0.1.2 (October 6, 2014)
 
 * Simplified MonetDB#select_rows gaining performance receiving the query result set
