--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,9 @@
 = MonetDB CHANGELOG
 
+== Version 0.2.0 (October 10, 2014)
+
+* Complete rewrite of the gem (dropped non-essential features)
+
 == Version 0.1.3 (October 8, 2014)
 
 * Corrected MonetDB#select_rows (was not fetching entire result set)
