Explicitly specifying that the gem only support the SQL language

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 == MonetDB {<img src="https://secure.travis-ci.org/archan937/monetdb.png"/>}[http://travis-ci.org/archan937/monetdb] {<img src="https://codeclimate.com/github/archan937/monetdb.png"/>}[https://codeclimate.com/github/archan937/monetdb]
 
-A pure Ruby database driver for MonetDB (monetdb5).
+A pure Ruby database driver for MonetDB (monetdb5-sql).
 
 === Installation
 
