--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,8 +1,8 @@
 = MonetDB CHANGELOG
 
-== Version 0.2.0 (October 10, 2014)
+== Version 0.2.0 (October 13, 2014)
 
-* Complete rewrite of the gem (dropped non-essential features)
+* Complete rewrite of the gem (only focussed on querying data using SQL)
 
 == Version 0.1.3 (October 8, 2014)
 
