--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -8,6 +8,7 @@
 == Version 0.2.0 (October 13, 2014)
 
 * Complete rewrite of the gem (only focussed on querying data using SQL)
+* Fixed major bug when fetching large result sets (rows were missing)
 
 == Version 0.1.3 (October 8, 2014)
 
