--- a/README.rdoc
+++ b/README.rdoc
@@ -16,9 +16,9 @@ Run the following in your console to install with Bundler:
 
 === License
 
-Copyright (c) 2014 Paul Engel, released under the MIT License
+Copyright (c) 2020 Paul Engel, released under the MIT License
 
-http://gettopup.com – http://github.com/archan937 – http://twitter.com/archan937 – {pm_engel@icloud.com}[mailto:pm_engel@icloud.com]
+http://github.com/archan937 – http://twitter.com/archan937 – {pm_engel@icloud.com}[mailto:pm_engel@icloud.com]
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
